--- a/style.css
+++ b/style.css
@@ -1,5 +1,236 @@
+/* 노말라이즈 시작 */
+* {
+    box-sizing: border-box;
+}
+
 body, ul, li{
     margin:0;
     padding:0;
     list-style:none;
+}
+
+a{
+    color:inherit;
+    text-decoration: none;
+}
+
+/* 노말라이즈 끝 */
+/* 라이브러리 시작 */
+
+.border_blue{
+border:3px solid blue;
+}
+
+.border_red{
+    border:0px solid red;
+}
+
+.border_green{
+    border:3px solid green;
+}
+
+/* 라이브러리 끝 */
+/* 커스텀 커서 시작 */
+* {
+    cursor:none;
+}
+
+body{
+    background-color:white;
+}
+.cursor {
+    position:fixed;
+    width:15px;
+    height:15px;
+    border-radius:50%;
+    background-color:white;
+    mix-blend-mode:difference;
+    pointer-events:none;
+    transform:translateX(-50%) translateY(-50%);
+    z-index:100;
+    transition:width .1s, height .1s, background-color 1s;
+  }
+
+  .need-to-cursor-big{
+    width:50px;
+    height:50px;
+  }
+/* 커스텀 커서 끝 */
+
+/* 헤더 시작 */
+  .top_bar{
+    position:fixed;
+    display:flex;
+    justify-content:space-between;
+    width:100vw;
+}
+
+.header_logo-wrap{
+    margin:30px;
+}
+
+.header_logo-wrap > a{
+    font-size:1.2rem;
+    font-weight:bold;
+    
+}
+
+.header_logo-wrap > a > img{
+    height:16px;
+}
+
+.header_right > ul{
+    display:flex;
+    margin:30px;
+}
+
+.header_right > ul > li > a{
+    background-color:white;
+    border-radius:3px;
+    font-size:1.2rem;
+    font-weight:bold;
+    padding:5px;
+    width:10px;
+    height:10px;
+    margin:10px;
+}
+
+/* 헤더 끝 */
+  /* 메인 박스 시작 */
+.main_bar{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    width:100vw;
+    height:100vh;
+    background-color:white;
+}
+
+.main_bar > .main_box{
+    width:100vw;
+    height:50vh;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main_bar > .main_box > div{
+    border-radius:100%;
+    height:10vw;
+    width:10vw;
+    background-color: black;
+    transition:opacity .3s;
+}
+
+
+.main_bar > .main_box > div:nth-child(2){
+    border-radius:0;
+    width: 30vw;
+    height: 10vw;
+    margin:10vw;
+    transition:all .5s;
+}
+  /* 메인 박스 끝 */
+
+/* 푸터 시작 */
+.bottom_bar{
+    position:fixed;
+    bottom:0;
+}
+
+.bottom_bar_box{
+    height:100px;
+    width:100vw;
+}
+
+.bottom_bar > .bottom_bar_box > .bottom_bar_inf{
+    color:black;
+    font-size:.8rem;
+    font-weight:bold;
+}
+/* 푸터 끝 */
+
+/* 비디오 시작 */
+
+.banner video{
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index:-2;
+    
+}
+
+.banner2 video{
+    position: absolute;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index:-3;
+    
+}
+
+/* 비디오 끝 */
+
+/* 마르퀴 시작 */
+.text-wrapper{
+    margin-top:-98vh;
+    display:flex;
+    justify-content: flex-start;
+    overflow: hidden;
+}
+
+.text-wrapper > h1{
+    font-size: 6rem;
+    text-transform: uppercase;
+    white-space: nowrap;
+    padding: 0 1rem;
+    letter-spacing: 1px;
+    animation: move-rt1 20000ms linear infinite;
+
+}
+.text-wrapper > h1 > span:nth-child(1){
+    color:transparent;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: rgba(255, 0, 0, 0.501);
+}
+
+.text-wrapper > h1:nth-of-type(2n){
+    color:transparent;
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: #000000;
+}
+
+.text-wrapper > h1:nth-child(2n) > span{
+    color:rgba(255, 0, 0, 0.516);
+}
+
+
+@keyframes move-rt1{
+    0%{
+        transform: translateX(0);
+    }
+    100%{
+        transform: translateX(-200%);
+    }
+}
+/* 마르퀴 끝 */
+
+.big {
+    transform:scaleY(3);
+}
+
+.showback{
+    background-color:transparent;
+}
+
+.small{
+    height: 5vw;
+    width: 5vw;
 }
